Final Commmit for PC.Testing on mobile for background issues

--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ header .social-links ul li a:focus {
     }
 }
 .team{
-    background: url(../media/team-bg.JPG);
+    background: url(../media/team-bgmob.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
